# video-submission

./: check_1.py  init_ros_gst_bridge.sh  python.py  sleep_1.py
config/: stream.sdp
src/auv_slam/: CMakeLists.txt  package.xml  setup.py
src/auv_slam/launch/: autonomous_gate.launch.py  ball.launch.py  gs.launch.py  gst.launch.py  qr.launch.py  test.launch.py  test_2.launch.py
src/auv_slam/pid_cpp/: heave_pid_rt.cpp  heave_pid_rt.h  rtw_continuous.h  rtw_solver.h  rtwtypes.h  wrapper.cpp
src/auv_slam/rviz/: qr_config.rviz
src/auv_slam/scripts/: ball_detector.py  ball_follower.py  cmd_mixer.py  depth_maintain.py  flare_detector.py  gate_detector.py  gate_navigator.py  heave_pid_controller.py  pwm_mapper.py  qr_node.py  ros_gst_udp.py  safety_monitor.py  serial_bridge.py  test.py  test_2.py
src/depth_sensor_pkg/: depth_sensor_node.py  package.xml  setup.cfg  setup.py
src/depth_sensor_pkg/depth_sensor_pkg/: depth_sensor_node.py
src/depth_sensor_pkg/launch/: depth_sensor.launch.py
src/underwater_navigation/: CMakeLists.txt  package.xml
src/underwater_navigation/config/: bridge_config.yaml
src/underwater_navigation/launch/: complete_simulation.launch.py
src/underwater_navigation/models/orca4_ign/: model.sdf
src/underwater_navigation/models/underwater_gate/: model.sdf
src/underwater_navigation/scripts/: autonomous_navigation_node.py  autonomous_sender.py  camera_processor_node.py  gate_navigation_node.py  thruster_controller.py  thruster_controller_node.py
src/underwater_navigation/urdf/: orca4_description.urdf
src/underwater_navigation/worlds/: underwater_pool.sdf
src/vn100_reader/install/: local_setup.sh  setup.sh
src/vn100_reader/log/: latest_build
src/vn100_reader/src/: setup.py
src/vn100_reader/src/vn100_reader/: vn100_ypr_publisher.py
